--- a/src/content/projects/en/studiovision.mdx
+++ b/src/content/projects/en/studiovision.mdx
@@ -4,22 +4,22 @@ author:
     name: Marco Rossi
     link: /author/marco-rossi
 title: StudioVision Creative
-description: "Corporate website for a creative design and branding studio"
+description: "Sito web aziendale per uno studio di design creativo e branding"
 link: https://studiovision-creative.it
 image:
     source: "@assets/images/projects/studiovision.jpg"
-    alt: "Screenshot of StudioVision Creative homepage"
+    alt: "Screenshot della homepage di StudioVision Creative"
 ---
 
-StudioVision Creative is a contemporary design studio specializing in creating visual identities and innovative branding solutions. The project required developing a modern and responsive website that would reflect the studio's sophisticated aesthetic.
+StudioVision Creative è uno studio di design contemporaneo specializzato nella creazione di identità visive e soluzioni di branding innovative. Il progetto ha richiesto lo sviluppo di un sito web moderno e reattivo che riflettesse l'estetica sofisticata dello studio.
 
-The site was built using cutting-edge technologies like React and TailwindCSS, with special attention to smooth animations and elegant transitions. The minimalist user interface highlights the work portfolio through an interactive and dynamic gallery.
+Il sito è stato realizzato utilizzando tecnologie all'avanguardia come React e TailwindCSS, con particolare attenzione alle animazioni fluide e alle transizioni eleganti. L'interfaccia utente minimalista mette in risalto il portfolio dei lavori attraverso una galleria interattiva e dinamica.
 
-Key project features:
-- Responsive design optimized for all devices
-- Custom animations to enhance user experience
-- Headless CMS for simplified content management
-- Advanced SEO optimization
-- Fast loading times through lazy loading implementation
+Caratteristiche principali del progetto:
+- Design responsivo ottimizzato per tutti i dispositivi
+- Animazioni personalizzate per migliorare l'esperienza utente
+- Sistema CMS headless per la gestione semplificata dei contenuti
+- Ottimizzazione SEO avanzata
+- Tempi di caricamento rapidi grazie all'implementazione di tecniche di lazy loading
 
-The end result is an elegant and high-performing website that perfectly represents the client's professional identity.
+Il risultato finale è un sito web elegante e performante che rappresenta perfettamente l'identità professionale del cliente.
