--- a/src/content/projects/cn/artisanlens.mdx
+++ b/src/content/projects/cn/artisanlens.mdx
@@ -3,24 +3,49 @@ pubDate: 2023-09-28
 author:
     name: Sarah Chen
     link: /author/sarah-chen
-title: ArtisanLens Studio
+title: 讲座
 description: "Portfolio website for a boutique photography and digital media agency"
 link: https://artisanlens-studio.com
 image:
     source: "@assets/images/projects/artisanlens.jpg"
-    alt: "Screenshot of ArtisanLens Studio homepage"
+    alt: "Screenshot of 讲座 homepage"
 ---
 
-ArtisanLens Studio is a dynamic digital media agency focused on commercial photography and multimedia storytelling. The project involved creating an immersive online platform that would showcase their diverse portfolio while maintaining a clean, professional aesthetic.
+## 🏮 雅集讲座 · Elegant Gatherings of Art and Thought
 
-The website was developed using Next.js and Framer Motion, emphasizing fluid interactions and captivating visual narratives. The design philosophy centered on creating an intuitive browsing experience that puts the photography work at the forefront.
+> 以艺会友，以文通心；小坐一席，聆听古今。
 
-Key project features:
-- Adaptive grid layout with dynamic resizing
-- Custom-built image carousel with gesture controls
-- Integrated booking system for client sessions
-- Progressive image loading for optimal performance
-- Multi-language support with localized content
-- Dark/light mode theming
+雅集，源于古人文人雅士之聚，今借讲座之形，再现传统文化的风采与智慧。在三明社，我们定期举办各类艺术讲座与文化沙龙，让传统艺术在交流中焕发新意。
 
-The final product delivers a sophisticated digital presence that effectively communicates the studio's artistic vision while providing a seamless user experience for potential clients.
+---
+
+### 🪔 活动特色
+
+- **古今交融，雅俗共赏**  
+  讲座内容涵盖传统艺术理论、名家作品赏析、技艺演示与文化美学，深入浅出，雅而不远。
+
+- **沉浸式文化体验**  
+  小型雅集、主题茶会、互动对话等形式，让每一场讲座都不止是“听讲”，更是“入境”。
+
+---
+
+### 📚 讲座内容方向
+
+| 类别 | 主题示例 |
+|------|----------|
+| 篆刻美学 | 篆书演变、印章流派、名印鉴赏 |
+| 书法文化 | 名帖导读、用笔法则、书法与修身 |
+| 插花花道 | 花材讲解、节气插花、东方意境营造 |
+| 陶艺审美 | 陶瓷纹样、器型史话、柴烧之道 |
+| 传统生活美学 | 雅集礼仪、香道、文房四宝的文化意义 |
+
+---
+
+### 🫖 我们相信：
+
+> **讲座，不是灌输，而是唤醒。**
+
+三明社以讲为引，以雅为旨，让知识与艺术在共赏共谈中流动，为你打开文化之门，也点亮生活中的诗意。
+
+---
+
