--- a/src/content/projects/cn/lightcraft.mdx
+++ b/src/content/projects/cn/lightcraft.mdx
@@ -3,24 +3,49 @@ pubDate: 2024-01-15
 author:
     name: Michael Zhang
     link: /author/michael-zhang
-title: LightCraft Studios
+title: 书法
 description: "Creative portfolio showcase for a modern photography and multimedia production house"
 link: https://lightcraft-studios.net
 image:
-    source: "@assets/images/projects/lightcraft.jpg"
-    alt: "Screenshot of LightCraft Studios homepage"
+    source: "@assets/images/projects/calligraphy.jpg"
+    alt: "Screenshot of 书法 homepage"
 ---
 
-LightCraft Studios specializes in contemporary visual storytelling through photography and mixed media production. This project required developing a sophisticated digital platform to highlight their creative work while maintaining an elegant, minimalist design approach.
+## 🖋️ 书法艺术 · Writing the Spirit of Culture
 
-Built with Astro and GSAP animations, the website delivers smooth transitions and engaging visual experiences. The design prioritizes a distraction-free environment that allows the studio's artistic portfolio to take center stage.
+> 一笔一划皆风骨，一横一竖见乾坤。
 
-Key project features:
-- Responsive masonry gallery with smart layout optimization
-- Touch-enabled slideshow with advanced transition effects
-- Automated scheduling portal for client consultations
-- Lazy loading with blur placeholder implementation
-- Content management in multiple languages
-- Customizable color schemes with system preference detection
+书法，是中华文化的灵魂符号，是用笔墨写意天地、抒情达志的艺术形式。提笔落墨间，是心境的沉淀，是节奏与韵律的律动。  
+在三明社，书法不仅是一项技艺，更是一种审美修养与精神寄托。
 
-The result is a polished web presence that effectively represents the studio's creative capabilities while offering an intuitive and engaging experience for prospective clients.
+---
+
+### ✨ 艺术特色
+
+- **笔墨为媒，心意为本**  
+  书法重“骨法用笔”，讲“神采意气”，借一支笔书写万象世界，品味字里行间的风度与情思。
+
+- **传统与个性的结合**  
+  从临帖入门到自成风格，书法是对传统的传承，也是个性的表达。
+
+---
+
+### 📜 学习内容
+
+| 模块 | 内容概述 |
+|------|----------|
+| 书体入门 | 学习楷书、行书、隶书、草书等多种书体结构与风格 |
+| 临帖训练 | 精选经典碑帖，掌握用笔方法与结字规律 |
+| 用墨技法 | 掌握中锋、侧锋、提按、转折等基本技巧 |
+| 创作实践 | 从字到章，从章到幅，完成独立书法作品 |
+| 美学提升 | 理解书法的章法布局、气韵格调与文化内涵 |
+
+---
+
+### 📖 我们相信：
+
+> **书法，是一场与自己对话的修行。**
+
+在笔墨纸砚之间，于行云流水之中，三明社邀你一起走进文字的灵魂，感受千年书意之美。
+
+---
