--- a/src/content/projects/cn/pixelcraft.mdx
+++ b/src/content/projects/cn/pixelcraft.mdx
@@ -3,24 +3,49 @@ pubDate: 2024-01-15
 author:
     name: Michael Zhang
     link: /author/michael-zhang
-title: PixelCraft Studios
+title: 陶艺
 description: "Creative platform for a modern digital art and photography collective"
 link: https://pixelcraft-studios.net
 image:
-    source: "@assets/images/projects/pixelcraft.jpg"
-    alt: "Screenshot of PixelCraft Studios homepage"
+    source: "@assets/images/projects/pottery.jpg"
+    alt: "Screenshot of 陶艺 homepage"
 ---
 
-PixelCraft Studios represents a collective of digital artists specializing in contemporary photography and mixed-media productions. This project required developing a sophisticated web presence that would highlight their experimental artwork while maintaining professional appeal.
+## 🏺 陶艺艺术 · Shaping Clay, Shaping Heart
 
-Built with Astro and GSAP animations, the site delivers smooth transitions and engaging visual experiences. The design approach focused on creating a minimalist interface that allows the artistic work to take center stage.
+> 一团泥土，一双巧手，于转盘之上捏塑岁月的温度。
 
-Key project features:
-- Masonry layout with intelligent image clustering
-- Touch-enabled gallery viewer with 3D transitions
-- Automated scheduling platform for consultations
-- Lazy-loading image system with blur placeholders
-- Region-specific content delivery
-- Customizable color schemes with system preference detection
+陶艺，是人与自然的对话，是手与泥的融合。捧一团泥，注一份心，拉坯成形、雕刻点缀、釉色交融，每一步都在塑造独一无二的作品，也在雕琢内心的专注与平静。
 
-The result is an elegant digital showcase that effectively represents the collective's creative identity while offering an intuitive platform for client engagement and portfolio discovery.
+---
+
+### 🌀 艺术特色
+
+- **泥随心转，器以意生**  
+  陶艺承载了“形”与“神”的双重表达，让你用双手感受艺术在掌心缓缓成形的奇妙。
+
+- **火与土的艺术**  
+  从拉坯成型到高温窑烧，每一件陶器都是时间与温度共同酝酿的艺术品，是静谧中沉淀的美。
+
+---
+
+### 🧶 学习内容
+
+| 模块 | 内容概述 |
+|------|----------|
+| 陶泥基础 | 认识泥性，掌握软硬、干湿控制技巧 |
+| 手工造型 | 捏、塑、挖、贴等基础技法练习 |
+| 拉坯训练 | 使用拉坯机制作杯、碗、壶等基本器型 |
+| 表面工艺 | 雕刻装饰、压印纹理、上釉技巧与色彩搭配 |
+| 烧制体验 | 参与装窑与出窑，感受火与泥的最终对话 |
+
+---
+
+### 🪨 我们相信：
+
+> **陶艺是手的艺术，更是心的修行。**
+
+在三明社的陶艺工坊里，每一件陶器都是独一无二的表达，是你与泥土之间最真诚的合作。
+
+---
+
