--- a/src/content/projects/cn/studiovision.mdx
+++ b/src/content/projects/cn/studiovision.mdx
@@ -1,25 +1,51 @@
 ---
-pubDate: 2024-02-15
+pubDate: 2025-06-13
 author:
     name: Marco Rossi
     link: /author/marco-rossi
-title: StudioVision Creative
-description: "Corporate website for a creative design and branding studio"
+title: 篆刻
+description: "金石篆刻之间，感受篆刻文化"
 link: https://studiovision-creative.it
 image:
-    source: "@assets/images/projects/studiovision.jpg"
-    alt: "Screenshot of StudioVision Creative homepage"
+    source: "@assets/images/projects/seal.jpg"
+    alt: "Screenshot of 篆刻 homepage"
 ---
 
-StudioVision Creative is a contemporary design studio specializing in creating visual identities and innovative branding solutions. The project required developing a modern and responsive website that would reflect the studio's sophisticated aesthetic.
+## 🧧 篆刻艺术 · Carving the Spirit of Characters
 
-The site was built using cutting-edge technologies like React and TailwindCSS, with special attention to smooth animations and elegant transitions. The minimalist user interface highlights the work portfolio through an interactive and dynamic gallery.
+> 一方印章，一份传承；方寸之间，雕刻汉字的灵性艺术。
 
-Key project features:
-- Responsive design optimized for all devices
-- Custom animations to enhance user experience
-- Headless CMS for simplified content management
-- Advanced SEO optimization
-- Fast loading times through lazy loading implementation
+篆刻，是书法、绘画与雕刻的交汇，是线条与章法的艺术对话。在三明社，我们通过篆书学习、章法布局、刀法训练和个性创作，引导每一位成员体会篆刻之美。
 
-The end result is an elegant and high-performing website that perfectly represents the client's professional identity.
+---
+
+### ✒️ 艺术特色
+
+- **刀为笔，石为纸，心为印，意为魂。**  
+  每一刀的刻划，都是与汉字精神的深度对话。  
+  每一道线条，都承载着文化的重量与美学的节奏。
+
+- **综合艺术体验**  
+  篆刻融合了**书法的结构、绘画的意境、雕刻的手感**，是一门沉静却富有生命力的艺术形式。
+
+---
+
+### 🧱 学习内容
+
+| 模块 | 内容概述 |
+|------|----------|
+| 篆书入门 | 识读小篆、金文、甲骨文等古文字，了解其演变与风格 |
+| 印稿设计 | 从构思到章法布局，打造专属印文 |
+| 刻刀技法 | 握刀方式、用力技巧、线条处理等实操训练 |
+| 印石创作 | 亲手雕刻个性化印章，体验“刻石成文”的魅力 |
+
+---
+
+### 🪵 我们相信：
+
+> **篆刻不仅是技艺，更是一种心境的修行。**
+
+在三明社的篆刻课堂中，您将走进传统艺术的深处，在方寸之间雕刻精神，在沉静中找回自我。
+
+---
+
