--- a/src/content/projects/en/pixelcraft.mdx
+++ b/src/content/projects/en/pixelcraft.mdx
@@ -3,15 +3,15 @@ pubDate: 2024-01-15
 author:
     name: Michael Zhang
     link: /author/michael-zhang
-title: PixelCraft Studios
+title: Pottery
 description: "Creative platform for a modern digital art and photography collective"
 link: https://pixelcraft-studios.net
 image:
-    source: "@assets/images/projects/pixelcraft.jpg"
-    alt: "Screenshot of PixelCraft Studios homepage"
+    source: "@assets/images/projects/pottery.jpg"
+    alt: "Screenshot of Pottery homepage"
 ---
 
-PixelCraft Studios represents a collective of digital artists specializing in contemporary photography and mixed-media productions. This project required developing a sophisticated web presence that would highlight their experimental artwork while maintaining professional appeal.
+Pottery represents a collective of digital artists specializing in contemporary photography and mixed-media productions. This project required developing a sophisticated web presence that would highlight their experimental artwork while maintaining professional appeal.
 
 Built with Astro and GSAP animations, the site delivers smooth transitions and engaging visual experiences. The design approach focused on creating a minimalist interface that allows the artistic work to take center stage.
 
