--- a/src/content/projects/en/artisanlens.mdx
+++ b/src/content/projects/en/artisanlens.mdx
@@ -3,15 +3,15 @@ pubDate: 2023-09-28
 author:
     name: Sarah Chen
     link: /author/sarah-chen
-title: ArtisanLens Studio
+title: Elegance
 description: "Portfolio website for a boutique photography and digital media agency"
 link: https://artisanlens-studio.com
 image:
     source: "@assets/images/projects/artisanlens.jpg"
-    alt: "Screenshot of ArtisanLens Studio homepage"
+    alt: "Screenshot of Elegance homepage"
 ---
 
-ArtisanLens Studio is a dynamic digital media agency focused on commercial photography and multimedia storytelling. The project involved creating an immersive online platform that would showcase their diverse portfolio while maintaining a clean, professional aesthetic.
+Elegance is a dynamic digital media agency focused on commercial photography and multimedia storytelling. The project involved creating an immersive online platform that would showcase their diverse portfolio while maintaining a clean, professional aesthetic.
 
 The website was developed using Next.js and Framer Motion, emphasizing fluid interactions and captivating visual narratives. The design philosophy centered on creating an intuitive browsing experience that puts the photography work at the forefront.
 
