--- a/src/content/projects/en/lightcraft.mdx
+++ b/src/content/projects/en/lightcraft.mdx
@@ -3,15 +3,15 @@ pubDate: 2024-01-15
 author:
     name: Michael Zhang
     link: /author/michael-zhang
-title: LightCraft Studios
+title: Calligraphy
 description: "Creative portfolio showcase for a modern photography and multimedia production house"
 link: https://lightcraft-studios.net
 image:
-    source: "@assets/images/projects/lightcraft.jpg"
-    alt: "Screenshot of LightCraft Studios homepage"
+    source: "@assets/images/projects/calligraphy.jpg"
+    alt: "Screenshot of Calligraphy homepage"
 ---
 
-LightCraft Studios specializes in contemporary visual storytelling through photography and mixed media production. This project required developing a sophisticated digital platform to highlight their creative work while maintaining an elegant, minimalist design approach.
+Calligraphy specializes in contemporary visual storytelling through photography and mixed media production. This project required developing a sophisticated digital platform to highlight their creative work while maintaining an elegant, minimalist design approach.
 
 Built with Astro and GSAP animations, the website delivers smooth transitions and engaging visual experiences. The design prioritizes a distraction-free environment that allows the studio's artistic portfolio to take center stage.
 
