--- a/src/content/projects/en/studiovision.mdx
+++ b/src/content/projects/en/studiovision.mdx
@@ -3,23 +3,23 @@ pubDate: 2024-02-15
 author:
     name: Marco Rossi
     link: /author/marco-rossi
-title: StudioVision Creative
-description: "Sito web aziendale per uno studio di design creativo e branding"
+title: Seal
+description: "Corporate website for a seal carving art studio"
 link: https://studiovision-creative.it
 image:
-    source: "@assets/images/projects/studiovision.jpg"
-    alt: "Screenshot della homepage di StudioVision Creative"
+    source: "@assets/images/projects/seal.jpg"
+    alt: "Screenshot della homepage di 篆刻"
 ---
 
-StudioVision Creative è uno studio di design contemporaneo specializzato nella creazione di identità visive e soluzioni di branding innovative. Il progetto ha richiesto lo sviluppo di un sito web moderno e reattivo che riflettesse l'estetica sofisticata dello studio.
+Seal Carving Art Studio specializes in traditional Chinese seal carving and contemporary visual arts. The project required developing a modern and responsive website that would reflect the studio's sophisticated aesthetic and cultural heritage.
 
-Il sito è stato realizzato utilizzando tecnologie all'avanguardia come React e TailwindCSS, con particolare attenzione alle animazioni fluide e alle transizioni eleganti. L'interfaccia utente minimalista mette in risalto il portfolio dei lavori attraverso una galleria interattiva e dinamica.
+The site was built using cutting-edge technologies like React and TailwindCSS, with special attention to smooth animations and elegant transitions. The minimalist user interface highlights the work portfolio through an interactive and dynamic gallery.
 
-Caratteristiche principali del progetto:
-- Design responsivo ottimizzato per tutti i dispositivi
-- Animazioni personalizzate per migliorare l'esperienza utente
-- Sistema CMS headless per la gestione semplificata dei contenuti
-- Ottimizzazione SEO avanzata
-- Tempi di caricamento rapidi grazie all'implementazione di tecniche di lazy loading
+Key project features:
+- Responsive design optimized for all devices
+- Custom animations to enhance user experience
+- Headless CMS for simplified content management
+- Advanced SEO optimization
+- Fast loading times through lazy loading techniques
 
-Il risultato finale è un sito web elegante e performante che rappresenta perfettamente l'identità professionale del cliente.
+The final result is an elegant and performant website that perfectly represents the client's professional identity and artistic tradition.
