--- a/src/content/projects/cn/calligraphy.mdx
+++ b/src/content/projects/cn/calligraphy.mdx
@@ -1,17 +1,17 @@
 ---
-pubDate: 2024-01-15
+pubDate: 2020-10-16
 author:
-    name: Michael Zhang
-    link: /author/michael-zhang
+    name: Triluminous Academy
+    link: /author/TriluminousAcademy
 title: 书法
-description: "Creative portfolio showcase for a modern photography and multimedia production house"
-link: https://lightcraft-studios.net
+description: "Writing the Spirit of Culture"
+link: https://triluminous.pages.dev/work/calligraphy
 image:
-    source: "@assets/images/projects/calligraphy.jpg"
-    alt: "Screenshot of 书法 homepage"
+    source: "@assets/images/projects/calligraphy.webp"
+    alt: "书法"
 ---
 
-## 🖋️ 书法艺术 · Writing the Spirit of Culture
+## 🖋️ 书法艺术
 
 > 一笔一划皆风骨，一横一竖见乾坤。
 
