--- a/src/content/projects/cn/lecture.mdx
+++ b/src/content/projects/cn/lecture.mdx
@@ -1,17 +1,17 @@
 ---
-pubDate: 2023-09-28
+pubDate: 2020-10-16
 author:
-    name: Sarah Chen
-    link: /author/sarah-chen
+    name: Triluminous Academy
+    link: /author/TriluminousAcademy
 title: 讲座
-description: "Portfolio website for a boutique photography and digital media agency"
-link: https://artisanlens-studio.com
+description: "Elegant Gatherings of Art and Thought"
+link: https://triluminous.pages.dev/work/lecture
 image:
-    source: "@assets/images/projects/artisanlens.jpg"
-    alt: "Screenshot of 讲座 homepage"
+    source: "@assets/images/projects/lecture.webp"
+    alt: "讲座"
 ---
 
-## 🏮 雅集讲座 · Elegant Gatherings of Art and Thought
+## 🏮 雅集讲座
 
 > 以艺会友，以文通心；小坐一席，聆听古今。
 
