--- a/src/content/projects/cn/pottery.mdx
+++ b/src/content/projects/cn/pottery.mdx
@@ -1,17 +1,17 @@
 ---
-pubDate: 2024-01-15
+pubDate: 2020-10-16
 author:
-    name: Michael Zhang
-    link: /author/michael-zhang
+    name: Triluminous Academy
+    link: /author/TriluminousAcademy
 title: 陶艺
-description: "Creative platform for a modern digital art and photography collective"
-link: https://pixelcraft-studios.net
+description: "Shaping Clay, Shaping Heart"
+link: https://triluminous.pages.dev/work/pottery
 image:
-    source: "@assets/images/projects/pottery.jpg"
-    alt: "Screenshot of 陶艺 homepage"
+    source: "@assets/images/projects/pottery.webp"
+    alt: "陶艺"
 ---
 
-## 🏺 陶艺艺术 · Shaping Clay, Shaping Heart
+## 🏺 陶艺艺术
 
 > 一团泥土，一双巧手，于转盘之上捏塑岁月的温度。
 
