--- a/src/content/projects/cn/seal.mdx
+++ b/src/content/projects/cn/seal.mdx
@@ -1,17 +1,17 @@
 ---
-pubDate: 2025-06-13
+pubDate: 2020-10-16
 author:
-    name: Marco Rossi
-    link: /author/marco-rossi
+    name: Triluminous Academy
+    link: /author/TriluminousAcademy
 title: 篆刻
-description: "金石篆刻之间，感受篆刻文化"
-link: https://studiovision-creative.it
+description: "Carving the Spirit of Characters"
+link: https://triluminous.pages.dev/work/seal
 image:
-    source: "@assets/images/projects/seal.jpg"
-    alt: "Screenshot of 篆刻 homepage"
+    source: "@assets/images/projects/seal.webp"
+    alt: "篆刻"
 ---
 
-## 🧧 篆刻艺术 · Carving the Spirit of Characters
+## 🧧 篆刻艺术
 
 > 一方印章，一份传承；方寸之间，雕刻汉字的灵性艺术。
 
