--- a/src/content/posts/cn/history.mdx
+++ b/src/content/posts/cn/history.mdx
@@ -1,14 +1,11 @@
 ---
 pubDate: 2025-06-14
-author:
-  name: 三明社文案组
-  link: /author/sanming
 title: "三明社古风时间轴"
 description: "本篇文章以古风风格展示三明社2021年以来的重要发展节点，见证社团成长的足迹。"
 image:
   source: "@assets/images/blog/sanming-history.jpg"
   alt: "三明社古风时间轴封面图"
-tags: ["三明社", "古风", "时间轴", "社团发展", "传统文化"]
+tags: ["三明社", "古风", "时间轴", "社团发展", "中华文化"]
 ---
 
 # 🏮 三明社发展时间轴 · 古风纪事
