--- a/src/content/posts/cn/the-evolution-of-remote-work-technologies.mdx
+++ b/src/content/posts/cn/the-evolution-of-remote-work-technologies.mdx
@@ -1,14 +1,11 @@
 ---
 pubDate: 2024-03-18
-author:
-    name: Marcus Chen
-    link: /author/marcus-chen
-title: "The Evolution of Remote Work Technologies"
-description: "Exploring how modern technologies are transforming the way we work remotely. From virtual reality meetings to AI-powered collaboration tools, discover the future of distributed workplaces."
+title: "远程办公技术的演变"
+description: "探讨现代技术如何改变我们的远程办公方式。从虚拟现实会议到AI协作工具，展望分布式团队的未来。"
 image:
     source: "@assets/images/blog/remote-work-tech.jpg"
-    alt: "Modern workspace setup with multiple screens showing virtual collaboration tools"
-tags: ["remote work", "technology", "productivity", "collaboration", "future of work"]
+    alt: "现代远程协作工具的多屏工作空间"
+tags: ["远程办公", "技术", "生产力", "协作", "未来办公"]
 ---
 
 The landscape of remote work has undergone a dramatic transformation in recent years. Let's dive into the technologies that are shaping this revolution and explore what the future holds for distributed teams.
