--- a/src/content/posts/cn/the-rise-of-sustainable-technology.mdx
+++ b/src/content/posts/cn/the-rise-of-sustainable-technology.mdx
@@ -1,14 +1,11 @@
 ---
 pubDate: 2024-03-15
-author:
-    name: Marcus Chen
-    link: /author/marcus-chen
-title: "The Rise of Sustainable Technology"
-description: "Exploring how green technology and sustainable innovation are shaping our digital future. From eco-friendly data centers to renewable energy in tech, discover how the industry is embracing environmental responsibility."
+title: "可持续技术的崛起"
+description: "探讨绿色科技与可持续创新如何塑造我们的数字未来。从环保数据中心到可再生能源，行业正积极践行环保责任。"
 image:
     source: "@assets/images/blog/sustainable-tech.jpg"
-    alt: "Modern green technology center with solar panels and sustainable architecture"
-tags: ["sustainability", "technology", "innovation", "green-tech", "environment"]
+    alt: "绿色科技中心与可持续建筑"
+tags: ["可持续", "技术", "创新", "绿色科技", "环境"]
 ---
 
 In an era where environmental consciousness meets technological advancement, the tech industry is undergoing a remarkable transformation. Let's explore how sustainable practices are revolutionizing our digital world.
