--- a/src/content/posts/en/01-testblog-copy.mdx
+++ b/src/content/posts/en/01-testblog-copy.mdx
@@ -1,12 +1,9 @@
 ---
 pubDate: 2020-01-01  # 更新为当前日期
-author:
-    name: 测试作者  # 修改为您的名称
-    link: /author/test-author  # 确保作者路径存在
-title: "TestBlog"  # 修改为中文标题
+title: "TestBlog"  # 中文标题
 description: "这是一篇用于测试的博客文章，介绍博客功能和格式。"  # 中文描述
 image:
-    source: "@assets/images/blog/test-image.jpg"  # 替换为测试图片路径
+    source: "@assets/images/blog/test-image.jpg"  # 测试图片路径
     alt: "测试博客封面图"
 tags: ["测试", "博客", "示例"]  # 中文标签
 ---
