--- a/src/content/projects/cn/calligraphy.mdx
+++ b/src/content/projects/cn/calligraphy.mdx
@@ -1,8 +1,5 @@
 ---
 pubDate: 2020-10-16
-author:
-    name: Triluminous Academy
-    link: /author/TriluminousAcademy
 title: 书法
 description: "Writing the Spirit of Culture"
 link: https://triluminous.pages.dev/work/calligraphy
@@ -23,7 +20,7 @@ image:
 ### ✨ 艺术特色
 
 - **笔墨为媒，心意为本**  
-  书法重“骨法用笔”，讲“神采意气”，借一支笔书写万象世界，品味字里行间的风度与情思。
+  书法重"骨法用笔"，讲"神采意气"，借一支笔书写万象世界，品味字里行间的风度与情思。
 
 - **传统与个性的结合**  
   从临帖入门到自成风格，书法是对传统的传承，也是个性的表达。
