--- a/src/content/projects/cn/lecture.mdx
+++ b/src/content/projects/cn/lecture.mdx
@@ -1,14 +1,11 @@
 ---
-pubDate: 2020-10-16
-author:
-    name: Triluminous Academy
-    link: /author/TriluminousAcademy
 title: 讲座
-description: "Elegant Gatherings of Art and Thought"
+pubDate: 2020-10-16
+description: 艺术与思想的雅集
 link: https://triluminous.pages.dev/work/lecture
 image:
     source: "@assets/images/projects/lecture.webp"
-    alt: "讲座"
+    alt: "雅集讲座"
 ---
 
 ## 🏮 雅集讲座
@@ -25,7 +22,7 @@ image:
   讲座内容涵盖传统艺术理论、名家作品赏析、技艺演示与文化美学，深入浅出，雅而不远。
 
 - **沉浸式文化体验**  
-  小型雅集、主题茶会、互动对话等形式，让每一场讲座都不止是“听讲”，更是“入境”。
+  小型雅集、主题茶会、互动对话等形式，让每一场讲座都不止是"听讲"，更是"入境"。
 
 ---
 
