--- a/src/content/projects/cn/pottery.mdx
+++ b/src/content/projects/cn/pottery.mdx
@@ -1,14 +1,11 @@
 ---
 pubDate: 2020-10-16
-author:
-    name: Triluminous Academy
-    link: /author/TriluminousAcademy
 title: 陶艺
-description: "Shaping Clay, Shaping Heart"
+description: 泥塑心灵
 link: https://triluminous.pages.dev/work/pottery
 image:
     source: "@assets/images/projects/pottery.webp"
-    alt: "陶艺"
+    alt: "陶艺艺术"
 ---
 
 ## 🏺 陶艺艺术
@@ -22,7 +19,7 @@ image:
 ### 🌀 艺术特色
 
 - **泥随心转，器以意生**  
-  陶艺承载了“形”与“神”的双重表达，让你用双手感受艺术在掌心缓缓成形的奇妙。
+  陶艺承载了"形"与"神"的双重表达，让你用双手感受艺术在掌心缓缓成形的奇妙。
 
 - **火与土的艺术**  
   从拉坯成型到高温窑烧，每一件陶器都是时间与温度共同酝酿的艺术品，是静谧中沉淀的美。
