--- a/src/content/projects/cn/seal.mdx
+++ b/src/content/projects/cn/seal.mdx
@@ -1,14 +1,11 @@
 ---
 pubDate: 2020-10-16
-author:
-    name: Triluminous Academy
-    link: /author/TriluminousAcademy
 title: 篆刻
-description: "Carving the Spirit of Characters"
+description: 刻画文字之魂
 link: https://triluminous.pages.dev/work/seal
 image:
     source: "@assets/images/projects/seal.webp"
-    alt: "篆刻"
+    alt: "篆刻艺术"
 ---
 
 ## 🧧 篆刻艺术
@@ -37,7 +34,7 @@ image:
 | 篆书入门 | 识读小篆、金文、甲骨文等古文字，了解其演变与风格 |
 | 印稿设计 | 从构思到章法布局，打造专属印文 |
 | 刻刀技法 | 握刀方式、用力技巧、线条处理等实操训练 |
-| 印石创作 | 亲手雕刻个性化印章，体验“刻石成文”的魅力 |
+| 印石创作 | 亲手雕刻个性化印章，体验"刻石成文"的魅力 |
 
 ---
 
