--- a/src/content/projects/en/lecture.mdx
+++ b/src/content/projects/en/lecture.mdx
@@ -1,14 +1,11 @@
 ---
-pubDate: 2020-10-16
-author:
-    name: Triluminous Academy
-    link: /author/TriluminousAcademy
 title: Lectures
-description: "Elegant Gatherings of Art and Thought"
+pubDate: 2020-10-16
+description: Elegant Gatherings of Art and Thought
 link: https://triluminous.pages.dev/work/lecture
 image:
     source: "@assets/images/projects/lecture.webp"
-    alt: "Lectures"
+    alt: "Refined Gathering Lectures"
 ---
 
 ## 🏮 Refined Gathering Lectures
