--- a/src/content/projects/en/pottery.mdx
+++ b/src/content/projects/en/pottery.mdx
@@ -1,14 +1,11 @@
 ---
-pubDate: 2020-10-16
-author:
-    name: Triluminous Academy
-    link: /author/TriluminousAcademy
 title: Ceramic
-description: "Shaping Clay, Shaping Heart"
+pubDate: 2020-10-16
+description: Shaping Clay, Shaping Heart
 link: https://triluminous.pages.dev/work/pottery
 image:
     source: "@assets/images/projects/pottery.webp"
-    alt: "Ceramic"
+    alt: "Ceramic Arts"
 ---
 
 ## 🏺 Ceramic Arts
