--- a/src/content/projects/en/seal.mdx
+++ b/src/content/projects/en/seal.mdx
@@ -1,14 +1,11 @@
 ---
 pubDate: 2020-10-16
-author:
-    name: Triluminous Academy
-    link: /author/TriluminousAcademy
 title: Seal
-description: "Carving the Spirit of Characters"
+description: Carving the Spirit of Characters
 link: https://triluminous.pages.dev/work/seal
 image:
     source: "@assets/images/projects/seal.webp"
-    alt: "Seal"
+    alt: "Seal Carving Arts"
 ---
 
 ## 🧧 Seal Carving Arts
