--- a/src/content/posts/cn/01-testblog-copy.mdx
+++ b/src/content/posts/cn/01-testblog-copy.mdx
@@ -1,11 +1,12 @@
 ---
-pubDate: 2020-01-01  # 更新为当前日期
+pubDate: 2020-01-01
 title: "博客功能测试"
-description: "这是一篇用于测试的博客文章，介绍博客功能和格式。"  # 中文描述
+description: "这是一篇用于测试的博客文章，介绍博客功能和格式。"
+order: 0
 image:
-    source: "@assets/images/blog/test-image.jpg"  # 替换为测试图片路径
+    source: "@assets/images/blog/test-image.jpg"
     alt: "测试博客封面图"
-tags: ["测试", "博客", "示例"]  # 中文标签
+tags: ["测试", "博客", "示例"]
 ---
 
 # 博客功能测试
@@ -53,3 +54,75 @@ function greeting(name) {
   return `Hello, ${name}!`;
 }
 console.log(greeting('Test'));
+```
+
+## 2. 图片测试
+
+![测试图片](@assets/images/blog/test-image.jpg)
+
+![带标题和描述的图片](@assets/images/blog/test-image.jpg "图片标题：测试图片")
+
+## 3. 链接测试
+
+[外部链接：百度](https://www.baidu.com)
+
+[内部链接：返回首页](/)
+
+## 4. 列表测试
+
+- 无序列表项 1
+- 无序列表项 2
+  - 嵌套无序列表项
+
+1. 有序列表项 1
+2. 有序列表项 2
+   1. 嵌套有序列表项
+
+## 5. 表格测试
+
+| 姓名   | 年龄 | 职业   |
+| ------ | ---- | ------ |
+| 张三   | 28   | 程序员 |
+| 李四   | 32   | 设计师 |
+
+## 6. 脚注测试
+
+这是一个带脚注的句子。[^1]
+
+[^1]: 这里是脚注内容。
+
+## 7. 多语言/多段落测试
+
+中文段落：这是一个中文测试段落。
+
+English paragraph: This is a test paragraph in English.
+
+## 8. 数学公式测试
+
+行内公式：$E=mc^2$
+
+块级公式：
+
+$$
+\int_0^1 x^2 dx = \frac{1}{3}
+$$
+
+## 9. 警告/提示/信息块测试
+
+> **提示：** 这是一个提示信息块。
+
+> **警告：** 这是一个警告信息块。
+
+> **信息：** 这是一个普通信息块。
+
+## 10. 嵌入视频/音频测试
+
+HTML 视频嵌入：
+
+<video src="/videos/sample.mp4" controls width="320"></video>
+
+HTML 音频嵌入：
+
+<audio src="/audios/sample.mp3" controls></audio>
+
+## 11. 自定义组件测试
