--- a/src/content/posts/cn/the-evolution-of-remote-work-technologies.mdx
+++ b/src/content/posts/cn/the-evolution-of-remote-work-technologies.mdx
@@ -2,6 +2,7 @@
 pubDate: 2024-03-18
 title: "远程办公技术的演变"
 description: "探讨现代技术如何改变我们的远程办公方式。从虚拟现实会议到AI协作工具，展望分布式团队的未来。"
+order: 0
 image:
     source: "@assets/images/blog/remote-work-tech.jpg"
     alt: "现代远程协作工具的多屏工作空间"
