--- a/src/content/posts/cn/the-rise-of-sustainable-technology.mdx
+++ b/src/content/posts/cn/the-rise-of-sustainable-technology.mdx
@@ -2,6 +2,7 @@
 pubDate: 2024-03-15
 title: "可持续技术的崛起"
 description: "探讨绿色科技与可持续创新如何塑造我们的数字未来。从环保数据中心到可再生能源，行业正积极践行环保责任。"
+order: 0
 image:
     source: "@assets/images/blog/sustainable-tech.jpg"
     alt: "绿色科技中心与可持续建筑"
