--- a/src/content/posts/en/01-testblog-copy.mdx
+++ b/src/content/posts/en/01-testblog-copy.mdx
@@ -2,6 +2,7 @@
 pubDate: 2020-01-01  # 更新为当前日期
 title: "TestBlog"  # 中文标题
 description: "这是一篇用于测试的博客文章，介绍博客功能和格式。"  # 中文描述
+order: 0
 image:
     source: "@assets/images/blog/test-image.jpg"  # 测试图片路径
     alt: "测试博客封面图"
