--- a/src/content/posts/en/history.mdx
+++ b/src/content/posts/en/history.mdx
@@ -2,6 +2,7 @@
 pubDate: 2025-06-14
 title: "Sanming Society Timeline in Traditional Style"
 description: "This article presents the key development milestones of Sanming Society since 2021 in a traditional Chinese style, witnessing the growth of our organization."
+order: 1
 image:
   source: "@assets/images/blog/sanming-history.jpg"
   alt: "Sanming Society Timeline Cover"
