--- a/src/content/posts/en/the-evolution-of-remote-work-technologies.mdx
+++ b/src/content/posts/en/the-evolution-of-remote-work-technologies.mdx
@@ -2,6 +2,7 @@
 pubDate: 2024-03-18
 title: "The Evolution of Remote Work Technologies"
 description: "Exploring how modern technologies are transforming the way we work remotely. From virtual reality meetings to AI-powered collaboration tools, discover the future of distributed workplaces."
+order: 0
 image:
     source: "@assets/images/blog/remote-work-tech.jpg"
     alt: "Modern workspace setup with multiple screens showing virtual collaboration tools"
