--- a/src/content/posts/en/the-rise-of-sustainable-technology.mdx
+++ b/src/content/posts/en/the-rise-of-sustainable-technology.mdx
@@ -2,6 +2,7 @@
 pubDate: 2024-03-15
 title: "The Rise of Sustainable Technology"
 description: "Exploring how green technology and sustainable innovation are shaping our digital future. From eco-friendly data centers to renewable energy in tech, discover how the industry is embracing environmental responsibility."
+order: 0
 image:
     source: "@assets/images/blog/sustainable-tech.jpg"
     alt: "Modern green technology center with solar panels and sustainable architecture"
