--- a/src/content/projects/cn/calligraphy.mdx
+++ b/src/content/projects/cn/calligraphy.mdx
@@ -1,8 +1,9 @@
 ---
-pubDate: 2020-10-16
+pubDate: 2025-07-08
 title: 书法
 description: "Writing the Spirit of Culture"
 link: https://triluminous.pages.dev/work/calligraphy
+order: 3
 image:
     source: "@assets/images/projects/calligraphy.webp"
     alt: "书法"
