--- a/src/content/projects/cn/lecture.mdx
+++ b/src/content/projects/cn/lecture.mdx
@@ -3,6 +3,7 @@ title: 讲座
 pubDate: 2020-10-16
 description: 艺术与思想的雅集
 link: https://triluminous.pages.dev/work/lecture
+order: 4
 image:
     source: "@assets/images/projects/lecture.webp"
     alt: "雅集讲座"
