--- a/src/content/projects/cn/pottery.mdx
+++ b/src/content/projects/cn/pottery.mdx
@@ -1,8 +1,9 @@
 ---
-pubDate: 2020-10-16
+pubDate: 2025-07-09
 title: 陶艺
 description: 泥塑心灵
 link: https://triluminous.pages.dev/work/pottery
+order: 2
 image:
     source: "@assets/images/projects/pottery.webp"
     alt: "陶艺艺术"
