--- a/src/content/projects/cn/seal.mdx
+++ b/src/content/projects/cn/seal.mdx
@@ -1,8 +1,9 @@
 ---
-pubDate: 2020-10-16
+pubDate: 2025-07-10
 title: 篆刻
 description: 刻画文字之魂
 link: https://triluminous.pages.dev/work/seal
+order: 1
 image:
     source: "@assets/images/projects/seal.webp"
     alt: "篆刻艺术"
