--- a/src/content/projects/en/lecture.mdx
+++ b/src/content/projects/en/lecture.mdx
@@ -1,8 +1,9 @@
 ---
 title: Lectures
-pubDate: 2020-10-16
+pubDate: 2025-07-07
 description: Elegant Gatherings of Art and Thought
 link: https://triluminous.pages.dev/work/lecture
+order: 4
 image:
     source: "@assets/images/projects/lecture.webp"
     alt: "Refined Gathering Lectures"
