--- a/src/content/projects/en/pottery.mdx
+++ b/src/content/projects/en/pottery.mdx
@@ -1,8 +1,9 @@
 ---
 title: Ceramic
-pubDate: 2020-10-16
+pubDate: 2025-07-09
 description: Shaping Clay, Shaping Heart
 link: https://triluminous.pages.dev/work/pottery
+order: 2
 image:
     source: "@assets/images/projects/pottery.webp"
     alt: "Ceramic Arts"
