--- a/src/content/projects/en/seal.mdx
+++ b/src/content/projects/en/seal.mdx
@@ -3,6 +3,7 @@ pubDate: 2020-10-16
 title: Seal
 description: Carving the Spirit of Characters
 link: https://triluminous.pages.dev/work/seal
+order: 1
 image:
     source: "@assets/images/projects/seal.webp"
     alt: "Seal Carving Arts"
