--- a/src/content/posts/cn/history.mdx
+++ b/src/content/posts/cn/history.mdx
@@ -2,6 +2,7 @@
 pubDate: 2025-06-14
 title: "三明社古风时间轴"
 description: "本篇文章以古风风格展示三明社2021年以来的重要发展节点，见证社团成长的足迹。"
+order: 0
 image:
   source: "@assets/images/blog/sanming-history.jpg"
   alt: "三明社古风时间轴封面图"
