--- a/src/content/projects/en/calligraphy.mdx
+++ b/src/content/projects/en/calligraphy.mdx
@@ -14,7 +14,7 @@ image:
 > Every stroke carries character, every line reveals the universe.
 
 Calligraphy is the soul symbol of Chinese culture—an art form that captures the essence of heaven and earth through brush and ink, expressing emotions and aspirations. In the moments between lifting the brush and touching paper, we find the settling of mind, the rhythm and cadence of artistic flow.  
-At Sanming Society, calligraphy is not merely a skill, but a cultivation of aesthetic taste and spiritual refuge.
+At Triluminous Society, calligraphy is not merely a skill, but a cultivation of aesthetic taste and spiritual refuge.
 
 ---
 
@@ -44,6 +44,6 @@ At Sanming Society, calligraphy is not merely a skill, but a cultivation of aest
 
 > **Calligraphy is a spiritual practice—a dialogue with oneself.**
 
-Among brush, ink, paper, and inkstone, within the flow of clouds and water, Sanming Society invites you to enter the soul of written characters and experience the beauty of thousand-year calligraphic artistry.
+Among brush, ink, paper, and inkstone, within the flow of clouds and water, Triluminous Society invites you to enter the soul of written characters and experience the beauty of thousand-year calligraphic artistry.
 
 ---
