--- a/src/content/projects/en/lecture.mdx
+++ b/src/content/projects/en/lecture.mdx
@@ -13,7 +13,7 @@ image:
 
 > Through art we forge friendships, through literature we connect hearts; gather around for a moment, and listen to the voices of past and present.
 
-Refined gatherings trace their origins to the assemblies of ancient literati and cultured scholars. Today, we revive this tradition through lectures, bringing forth the splendor and wisdom of traditional culture. At Sanming Society, we regularly host various art lectures and cultural salons, allowing traditional arts to flourish anew through exchange and dialogue.
+Refined gatherings trace their origins to the assemblies of ancient literati and cultured scholars. Today, we revive this tradition through lectures, bringing forth the splendor and wisdom of traditional culture. At Triluminous Society, we regularly host various art lectures and cultural salons, allowing traditional arts to flourish anew through exchange and dialogue.
 
 ---
 
@@ -43,6 +43,6 @@ Refined gatherings trace their origins to the assemblies of ancient literati and
 
 > **Lectures are not about indoctrination, but about awakening.**
 
-Sanming Society uses lectures as our guide and refinement as our purpose, allowing knowledge and art to flow through shared appreciation and discussion, opening cultural doors for you while illuminating the poetry in everyday life.
+Triluminous Society uses lectures as our guide and refinement as our purpose, allowing knowledge and art to flow through shared appreciation and discussion, opening cultural doors for you while illuminating the poetry in everyday life.
 
 ---
