--- a/src/content/projects/en/pottery.mdx
+++ b/src/content/projects/en/pottery.mdx
@@ -43,6 +43,6 @@ Ceramics is a dialogue between humanity and nature, a fusion of hands and clay. 
 
 > **Ceramics is an art of the hands, and even more, a practice of the heart.**
 
-In Sanming Society's ceramic workshop, every piece of pottery is a unique expression—your most sincere collaboration with clay.
+In Triluminous Society's ceramic workshop, every piece of pottery is a unique expression—your most sincere collaboration with clay.
 
 ---
