--- a/src/content/projects/en/seal.mdx
+++ b/src/content/projects/en/seal.mdx
@@ -13,7 +13,7 @@ image:
 
 > One seal, one legacy; within the confines of an inch, carving the spiritual art of Chinese characters.
 
-Seal carving is the convergence of calligraphy, painting, and sculpture—an artistic dialogue between lines and composition. At Sanming Society, through seal script learning, compositional layout, knife technique training, and personal creation, we guide each member to experience the beauty of seal carving.
+Seal carving is the convergence of calligraphy, painting, and sculpture—an artistic dialogue between lines and composition. At Triluminous Society, through seal script learning, compositional layout, knife technique training, and personal creation, we guide each member to experience the beauty of seal carving.
 
 ---
 
@@ -43,6 +43,6 @@ Seal carving is the convergence of calligraphy, painting, and sculpture—an art
 
 > **Seal carving is not merely a craft, but a practice of mental cultivation.**
 
-In Sanming Society's seal carving classroom, you will journey into the depths of traditional art, carving spirit within the space of an inch, and rediscovering yourself in tranquility.
+In Triluminous Society's seal carving classroom, you will journey into the depths of traditional art, carving spirit within the space of an inch, and rediscovering yourself in tranquility.
 
 ---
