--- a/src/content/posts/en/history.mdx
+++ b/src/content/posts/en/history.mdx
@@ -1,21 +1,21 @@
 ---
-pubDate: 2025-06-14
-title: "Sanming Society Timeline in Traditional Style"
-description: "This article presents the key development milestones of Sanming Society since 2021 in a traditional Chinese style, witnessing the growth of our organization."
+pubDate: 2025-07-14
+title: "Triluminous Society Timeline in Traditional Style"
+description: "This article presents the key development milestones of Triluminous Society since 2021 in a traditional Chinese style, witnessing the growth of our organization."
 order: 1
 image:
   source: "@assets/images/blog/sanming-history.jpg"
-  alt: "Sanming Society Timeline Cover"
-tags: ["Sanming Society", "Traditional Style", "Timeline", "Club Development", "Chinese Culture"]
+  alt: "Triluminous Society Timeline Cover"
+tags: ["Triluminous Society", "Traditional Style", "Timeline", "Club Development", "Chinese Culture"]
 ---
 
-# 🏮 Sanming Society Development Timeline · A Traditional Chronicle
+# 🏮 Triluminous Society Development Timeline · A Traditional Chronicle
 
 <div className="relative border-l-2 border-dashed border-amber-800 pl-6 ml-4 space-y-12 mt-12 text-[17px] font-serif">
 
   <div className="relative ml-auto w-[80%] bg-amber-50 border border-amber-300 rounded-xl shadow-md p-4">
     <div className="absolute left-[-1.4rem] top-2 w-3 h-3 bg-red-600 rounded-full border-2 border-white shadow"></div>
-    <p className="text-red-700 font-semibold">[2021] Establishment of Sanming Society</p>
+    <p className="text-red-700 font-semibold">[2021] Establishment of Triluminous Society</p>
     <p className="text-gray-700 mt-2">Born at Meigao, our seal carving journey began with the mission to promote the beauty of Chinese characters.</p>
   </div>
 
